--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .btn {
+        @apply flex gap-x-2 border-2 items-center rounded-md
+        outline-none hover:no-underline py-2 px-4 cursor-pointer
+    }
+    .input-select{
+        @apply w-full border-customHsl-bkg border-2 py-2 px-4 
+        rounded-[4px] text-[16px] border-solid border-customHsl-nuted outline-none
+    }
+
+    button{
+        &:disabled{
+            background: grey;
+            cursor: auto;
+        }
+    }
+}
